Fixed z-index bug for dropdown

--- a/src/Components/SessionHeaderMenu/SessionHeaderMenu.scss
+++ b/src/Components/SessionHeaderMenu/SessionHeaderMenu.scss
@@ -47,6 +47,7 @@
       padding: 10px 0;
       border-bottom-left-radius: 4px;
       border-bottom-right-radius: 4px;
+      z-index: 1000;
 
       .DropdownItem {
         padding: 8px 15px;
